-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.257 2008-04-21 19:57:58 guru Exp $
-----------------------------------------------------------------------------------------
2008-04-21	pwessel
	* mapproject.c:		-G+ will compute distance between coordinates in first 4 columns

2008-04-19	pwessel
	* configure.ac, src/makegmt.macros.in, mex/makefile:  Added support for --enable-octave
		as an alternative to --enable-matlab

2008-04-16	remko
	* psxy.c, psxyz.c:	Two bug fixes in both programs.
				- If first symbol in list with size was not circle, if got rejected.
				- When sizes of -Sr or -Sj were read from list, they were always inches.

2008-04-15	remko
	* pslib.c, PSL_*.ps:	Renamed a few PostScript commands; reduced a bit in size.
	* gmt_support.c (GMT_just_decode):	Bug fix: was defaulting to BC, instead of BL.
				Also reduced to two arguments (second being default justification).
	* ps{image,legend}.c:	Reduced arguments in GMT_just_decode.
	* ps{scale,text}.c:	---"---
	* gmt_support.h:	---"---
	* gmt_plot.[ch] (GMT_timestamp):	Added "justify" argument to specify justification of
				the time stamp box. Provided by gmtdefaults or -U option.
	* gmt_init.c:		Added justification to GMT_UNIX_POS. Is now <just>/<dx>/<dy>.
				Also added <just> to -U option parsing.
				Fully backwards compatible with previous versions (default just=BL).
	* gmtdefaults.txt:	---"---
	* explain_-U.txt:	---"---
	* common_options.txt:	---"---
	* gmt{,_globals,_common.h}:	---"---
	* .gmtdefaults_*.orig:	---"---. Set PS_IMAGE_COMPRESS = lzw.
	* .gmtdefaults4.doc, .gmtdefaults_test:	Now created on the fly from system defaults file.

2008-04-14	pwessel
	* psxy[z].c:		Drawing arrows with -SvS and time-coordinates did not work as 2nd time
				coordinate did not get processed properly.

2008-04-13	pwessel
	* grdview.c:		The facade (-N) outline was drawn with contour pen.  Now use -Wf to change
				the facade pen from its default value.